--- a/index.html
+++ b/index.html
@@ -63,9 +63,14 @@
 
             <hr class="linebreaker">
 
-            <div class="åbningstider">
-                <p>Monday 8:00-18:00 <br> Tuesday 10:00-18:00 <br> Wednesday 9:00-18:00 <br>
-                    Thursday 8:00-19:00 <br> Friday 8:00-20:00 <br> Saturday 9:00-14:00 <br> Sunday Closed </p>
+            <div class="åbningstiderne">
+                <div class="leftÅbning">
+                    <p>Monday <br> Tuesday <br> Wednesday <br> Thursday <br> Friday <br> Saturday <br> Sunday</p>
+                </div>
+
+                <div class="rightÅbning">
+                    <p>8:00 - 18:00 <br> 10:00 - 18:00 <br> 9:00 - 18:00 <br> 8:00 - 19:00 <br> 8:00 - 20:00 <br> 9:00 - 14:00 <br> Closed</p>
+                </div>
             </div>
 
             <hr class="linebreaker">
