--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moreteasir</title>
     <link rel="stylesheet" href="style.css">
-    <link rel='stylesheet' id='ricca-google-fonts-css' href='http://fonts.googleapis.com/css?family=Inconsolata%3Aregular%7COswald%3A300&#038;subset=latin&#038;ver=4.9.22' type='text/css' media='all'/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Inconsolata%3Aregular%7COswald%3A300&#038;subset=latin&#038;ver=4.9.22'/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
