opdatering fra main

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="format-detection" content="telephone=no">
     <title>Moreteasir</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Inconsolata%3Aregular%7COswald%3A300&#038;subset=latin&#038;ver=4.9.22'/>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Inconsolata%3Aregular%7COswald%3A300&#038;subset=latin&#038;ver=4.9.22'/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
@@ -29,7 +30,7 @@
 
             <div class="tekstIndex">
                 <h1>Creative and fresh</h1>
-                <h3>+45 33 33 90 83</h3>
+                <a href="tel:+45-33-33-90-83">+45 33 33 90 83</a>
             </div>
     </section>
 
@@ -178,11 +179,6 @@
     function hideMenu(){
         navLinks.style.right = "-200px";
     }
-</script>
-
-<script>
-    navLinks = document.querySelectorAll('a[href="'+document.URL+'"]')
-    navLinks.forEach(link => link.className += ' current-link');
 </script>
 
 </body>
