--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="nav-links" id="navLinks">
                     <i class="fa fa-sharp fa-light fa-xmark" onclick="hideMenu()"></i>
                     <ul>
-                        <li><a href="">Book Online</a></li>
+                        <li><a href="https://salonbook.one/?moreteasir#/">Book Online</a></li>
                         <li><a href="priceList.html">Price List</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
@@ -40,7 +40,7 @@
             <br>
             <div class="socialeMedier">
                 <div class="bookOnline">
-                    <a href="index.html"><h1>BOOK APPOINTMENT ONLINE</h1></a>
+                    <a href="https://salonbook.one/?moreteasir#/"><h1>BOOK APPOINTMENT ONLINE</h1></a>
                 </div>
                 <div class="socialeMedierLogo">
                     <ul>
