--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             </nav>
 
             <div class="tekstIndex">
-                <h1>Creative and fresh</h1>
-                <a href="tel:+45-33-33-90-83">+45 33 33 90 83</a>
+                <a href="https://salonbook.one/?moreteasir#/"><h1>Creative and fresh</h1></a>
+                <a href="tel:+45-33-33-90-83"><h3>+45 33 33 90 83</h3></a>
             </div>
     </section>
 
